--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: LINTCAS
+Package: LINTULcassava
 Type: Package
 Title: LINTUL CASSAVA crop growth simulation model
 Version: 0.0-3
@@ -9,5 +9,5 @@ Suggests: litedown
 VignetteBuilder: litedown 
 Author: Joy Adiele, Rob van den Beuken, Guillaume Ezui, Peter Leffelaar, Tom Schut
 Maintainer: Robert Hijmans <r.hijmans@gmail.com>
-Description: This package implements a LINTUL crop growth simulation model for cassava. It is a packaged version of the LINTUL_Cassava_NPK model R code available here https://models.pps.wur.nl/index.php/lintulcassavanpk (2024-10-2100). The packaging was done to facilitate the use of the model.
+Description: This package implements a LINTUL crop growth simulation model for cassava. It is a packaged version of the R scripts available here https://models.pps.wur.nl/index.php/lintulcassavanpk (2024-10-2100). 
 License: EUPL
