--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,5 @@
+useDynLib(LINTULcassava, .registration=TRUE)
+import(methods, Rcpp) #,meteor
+#exportMethods("crop<-", "soil<-", "control<-", "weather<-", "run")
 export(LC_crop, LINTCAS, Adiele)
 
