--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,12 @@ Type: Package
 Title: LINTUL CASSAVA crop growth simulation model
 Version: 0.1-0
 Date: 2026-01-09
-Imports: deSolve
 Depends: R (>= 3.5.0)
-Suggests: litedown
+Suggests: litedown, deSolve
 LinkingTo: Rcpp
 Imports: Rcpp (>= 1.0-10)
 VignetteBuilder: litedown 
 Author: Guillaume Ezui, Rob van den Beuken, Joy Adiele, Peter Leffelaar, Tom Schut
 Maintainer: Robert Hijmans <r.hijmans@gmail.com>
-Description: This package implements a LINTUL crop growth simulation model for cassava. It is a packaged version of the R scripts available here https://models.pps.wur.nl/index.php/lintulcassavanpk (2024-10-2100). 
+Description: This package implements a LINTUL crop growth simulation model for cassava described by Ezui et al. It contains a C++ implementation of the model as well as the R implementation also available in the scripts available here https://models.pps.wur.nl/index.php/lintulcassavanpk (2024-10-2100) -- with minor tweaks in the user interface to make it easier to use. 
 License: EUPL
