--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: LINTULcassava
 Type: Package
 Title: LINTUL CASSAVA crop growth simulation model
-Version: 0.1-0
-Date: 2026-01-09
+Version: 0.1-1
+Date: 2026-01-10
 Depends: R (>= 3.5.0)
-Suggests: litedown, deSolve
+Suggests: deSolve, litedown, tinytest
 LinkingTo: Rcpp
 Imports: Rcpp (>= 1.0-10)
 VignetteBuilder: litedown 
-Author: Guillaume Ezui, Rob van den Beuken, Joy Adiele, Peter Leffelaar, Tom Schut
-Maintainer: Robert Hijmans <r.hijmans@gmail.com>
-Description: This package implements a LINTUL crop growth simulation model for cassava described by <Ezui et al., 2018. Simulating drought impact and mitigation in cassava using the LINTUL model. Field Crops Research 219: 256-272>. The package contains a C++ implementation of the model as well as the R implementation in the scripts available here https://models.pps.wur.nl/index.php/lintulcassavanpk (2024-10-2100), with minor tweaks in the user interface to make it easier to use. 
+Authors@R: c(person("Guillaume", "Ezui", role="aut"), person("Rob", "van den Beuken", role = "aut"), person("Joy", "Adiele", role="aut"), person("Tom", "Schut", role="aut"), person("Robert J.", "Hijmans", role= c("cre", "aut"),  email="r.hijmans@gmail.com"))
+Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
+Description: This package contains a very fast implementation of the LINTUL crop growth model to simulate water-limited growth and development of cassava. The model was developed by Ezui et al. (2018) <doi:10.1016/j.fcr.2018.01.033> and callibrated by Adiele et al. (2021) <doi:10.1016/j.eja.2021.126242>. 
 License: EUPL
